1.4.3
  - added header formating suport for freezing panes, changing background color and autofiltering

1.4.2
  - Bugfix for NA timestamps

1.4.1
  - Fix strict-prototypes warnings

1.4.0
  - Update libxlsxwriter to 1.0.3

1.3.1
  - Fix a unit test in R-devel for timezone attribute comparisons

1.3
  - write_xlsx gains option use_zip64 for 4GB+ file support
  - libxslxwriter error messages are printed to REprintf instead of fprintf
  - Handle overly long or duplicate sheet names
  - The help assistant only appears once per session

1.2
  - Update bundled libxlswriter 0.8.8
  - xl_formula and xl_hyperlink now correctly support NA
  - Oil clippy a bit

1.1
  - Update bundled libxlswriter 0.8.4
  - Do not write blank xlsx strings for NA and "" character values
  - Coerce bit64 vectors to double with warning (xlsx does not have int64)

1.0
  - Save R 'Date' types as proper datetime strings
  - Update vendored libxlswriter to 0.7.6

0.2
  - Add support for lists in write_xlsx() to create xlsx with multiple sheets
  - Automatically coerce columns of type 'Date' and 'hms' to strings

0.1
  - Initial CRAN release with clippy