@@ -1,5 +1,6 @@
 1.4.3
   - added header formating suport for freezing panes, changing background color and autofiltering
+  - added option to change column widths manually or guess from row or header
 
 1.4.2
   - Bugfix for NA timestamps
